# screentime-web

./: Cargo.toml  README.md
src/: auth.rs  main.rs
static/: index.html
